# Rasterizer-C

./: .gitmodules  CMakeLists.txt  README.md
src/: clock.c  clock.h  color.h  display.c  display.h  framebuffer.c  framebuffer.h  input.c  input.h  main.c  math.c  math.h  mesh.c  mesh.h  texture.c  texture.h
src/math/: mat4.c  mat4.h  quat.c  quat.h  utils.c  utils.h  vec2.c  vec2.h  vec3.c  vec3.h  vec4.c  vec4.h
